# JBEmbyAPI

./: .gitattributes  .gitignore  C++-Demo.bat  Go-Demo.bat  MakeAll.bat  README.md  go.mod
API/: Constants.go  Emby.go  Errors.go  Functions.go  Private.go  Tables.go  Types.go
cpp-client/: CMakeLists.txt  jbgolib.hpp  jbparser.hpp  main.cpp  parser.hpp
export/: export.go  jbembyapi.h
go-client/: go-client.go  main.go
